--- a/styles.css
+++ b/styles.css
@@ -14,16 +14,61 @@ body {
     border-radius: 10px;
 }
 
+.temporizador-container {
+    max-width: 400px;
+    margin: 0 auto;
+    background-color: #333;
+    padding: 20px;
+    border-radius: 10px;
+    margin-top: 20px;
+    text-align: center;
+    display: flex;
+    flex-direction: column; /* Añadimos flex-direction: column para que el contenido se alinee verticalmente */
+    align-items: center;
+}
+
+.leyenda {
+    font-size: 32px;
+    color: #ffffff;
+    /* margin-bottom: 5px;  */
+    
+}
+
+.temporizador {
+    font-size: 36px;
+    color: #ffffff;
+    margin: 0 auto 15px auto; /* Centramos horizontalmente */
+}
+
+.oculto {
+    display: none;
+}
+
+
+
 h1 {
     font-size: 24px;
     margin-bottom: 20px;
 }
 
-label, input {
+label {
     display: block;
-    margin: 0 auto;
     margin-bottom: 10px;
 }
+
+input {
+    display: block;
+    margin: 0 auto;
+    margin-bottom: 20px;
+    background-color: #555;
+    color: #ffffff;
+    border: none;
+    border-radius: 5px;
+    padding: 10px;
+    width: 80%; /* Cambia el valor según sea necesario */
+    max-width: 300px; /* Establece un ancho máximo */
+}
+
 
 button {
     background-color: #0074d9;
@@ -38,4 +83,14 @@ button {
 #temporizador {
     font-size: 36px;
     margin-top: 20px;
+}
+.footer {
+    
+    max-width: 400px;
+    margin: 20px auto;
+    background-color: #333;
+    padding: 20px;
+    border-radius: 10px;
+    color: #ffffff;
+    text-align: center;
 }
